@@ -53,6 +53,7 @@ importFrom(BiocParallel,MulticoreParam)
 importFrom(BiocParallel,bplapply)
 importFrom(BiocParallel,bpstart)
 importFrom(BiocParallel,bpstop)
+importFrom(BiocParallel,multicoreWorkers)
 importFrom(DO.db,DOANCESTOR)
 importFrom(DO.db,DOOFFSPRING)
 importFrom(DO.db,DOPARENTS)
